--- a/roles/services/tasks/vaultwarden.yml
+++ b/roles/services/tasks/vaultwarden.yml
@@ -46,6 +46,7 @@
       - "{{ docker_dir }}/{{ container_name }}/data:/data"
     networks:
       - name: docker_network
+    purge_networks: yes
     restart_policy: always
 
 - name: Make sure the {{ container_name }}-backup container is created and running
