--- a/roles/services/files/homeassistant/configuration.yaml
+++ b/roles/services/files/homeassistant/configuration.yaml
@@ -10,15 +10,8 @@ homeassistant:
         - 127.0.0.1
         - ::1
         - 172.20.0.0/24 # Docker network ipam_config
-
-# Text to speech
-tts:
-  - platform: google_cloud
-    service_name: google_say
-    key_file: service-account.json
-    language: en-GB
-    gender: female
-    text_type: ssml
+frontend:
+  themes: !include_dir_merge_named themes
 
 http:
   use_x_forwarded_for: true
@@ -60,5 +53,7 @@ script: !include scripts.yaml
 input_number: !include input_number.yaml
 template: !include templates.yaml
 binary_sensor: !include binary_sensor.yaml
-wake_on_lan:
 sensor: !include sensors.yaml
+notify: !include notifications.yaml
+tts: !include tts.yaml
+wake_on_lan:
