--- a/roles/services/tasks/main.yml
+++ b/roles/services/tasks/main.yml
@@ -1,2 +1,4 @@
 - include_tasks: vaultwarden.yml
 - include_tasks: homeassistant.yml
+- include_tasks: mosquitto.yml
+- include_tasks: zigbee2mqtt.yml
