--- a/lisbon.yml
+++ b/lisbon.yml
@@ -10,15 +10,7 @@
     - role: system
     - role: docker
     - role: geerlingguy.security
+    - role: geerlingguy.ntp
     - role: security
     - role: network
     - role: services
-
-# - hosts: localhost
-
-#   roles:
-#     - role: system
-#       become: yes
-#     - role: docker
-#       become: yes
-#     - role: dotfiles
