--- a/roles/network/tasks/wireguard.yml
+++ b/roles/network/tasks/wireguard.yml
@@ -5,6 +5,9 @@
     state: directory
     path: "{{ item }}"
     recurse: yes
+    owner: "root"
+    group: "root"
+    mode: 0644
   with_items:
       - "{{ docker_dir }}/{{ container_name }}"
 
@@ -24,6 +27,7 @@
     env:
       "WG_HOST": "{{ hostname_vpn }}"
       "TZ": "{{ timezone }}"
+      "WG_POST_UP": "{{ post_up }}"
     volumes:
       - "{{ docker_dir }}/{{ container_name }}:/etc/wireguard"
     networks:
