--- a/roles/network/vars/cloudflare.yml
+++ b/roles/network/vars/cloudflare.yml
@@ -10,13 +10,9 @@ cloudflare_dns_token: !vault |
 domains:
   - "vpn.{{ base_hostname }}"
   - "lisbon.{{ base_hostname }}"
-  - "www.lisbon.{{ base_hostname }}"
   - "wireguard.{{ base_hostname }}"
-  - "www.wireguard.{{ base_hostname }}"
   - "webmail.{{ base_hostname }}"
-  - "www.webmail.{{ base_hostname }}"
   - "vaultwarden.{{ base_hostname }}"
-  - "www.vaultwarden.{{ base_hostname }}"
   - "homeassistant.{{ base_hostname }}"
-  - "www.homeassistant.{{ base_hostname }}"
+  - "zigbee2mqtt.{{ base_hostname }}"
 cron: "@daily"
