--- a/roles/network/vars/wireguard.yml
+++ b/roles/network/vars/wireguard.yml
@@ -1,2 +1,3 @@
 container_name: "wireguard"
 hostname_vpn: "vpn.{{ base_hostname }}"
+post_up: "iptables -t nat -A POSTROUTING -s 10.8.0.0/24 -o eno1 -j MASQUERADE; iptables -A INPUT -p udp -m udp --dport 51820 -j ACCEPT; iptables -A FORWARD -i wg0 -j ACCEPT; iptables -A FORWARD -o wg0 -j ACCEPT;"
