--- a/roles/services/tasks/vaultwarden.yml
+++ b/roles/services/tasks/vaultwarden.yml
@@ -5,8 +5,8 @@
     state: directory
     path: "{{ item }}"
     recurse: yes
-    owner: root
-    group: root
+    owner: "root"
+    group: "root"
     mode: 0644
   with_items:
       - "{{ docker_dir }}/{{ container_name }}/data"
@@ -17,8 +17,8 @@
     src: files/vaultwarden.conf
     dest: "{{ docker_dir }}/{{ container_name }}/rclone/rclone.conf"
     decrypt: yes
-    owner: root
-    group: root
+    owner: "root"
+    group: "root"
     mode: 0644
 
 - name: Make sure the {{ container_name }} container is created and running
