--- a/roles/services/tasks/mosquitto.yml
+++ b/roles/services/tasks/mosquitto.yml
@@ -50,6 +50,13 @@
     purge_networks: yes
     restart_policy: always
 
+- name: Start {{ container_name }} at 5:00 AM
+  cron:
+    name: "Start {{ container_name }} at 5:00 AM"
+    minute: "0"
+    hour: "5"
+    job: "docker start {{ container_name }}"
+
 - name: Create users on {{ container_name }}
   community.docker.docker_container_exec:
     container: "{{ container_name }}"
