--- a/roles/services/tasks/vaultwarden.yml
+++ b/roles/services/tasks/vaultwarden.yml
@@ -49,6 +49,13 @@
     purge_networks: yes
     restart_policy: always
 
+- name: Start {{ container_name }} at 5:00 AM
+  cron:
+    name: "Start {{ container_name }} at 5:00 AM"
+    minute: "0"
+    hour: "5"
+    job: "docker start {{ container_name }}"
+
 - name: Make sure the {{ container_name }}-backup container is created and running
   community.docker.docker_container:
     name: "{{ container_name }}-backup"
@@ -80,3 +87,10 @@
       - "{{ docker_dir }}/{{ container_name }}/data:/bitwarden/data"
       - "{{ docker_dir }}/{{ container_name }}/rclone:/config/rclone"
     restart_policy: always
+
+- name: Start {{ container_name }}-backup at 5:00 AM
+  cron:
+    name: "Start {{ container_name }}-backup at 5:00 AM"
+    minute: "0"
+    hour: "5"
+    job: "docker start {{ container_name }}-backup"
