--- a/roles/system/tasks/essential.yml
+++ b/roles/system/tasks/essential.yml
@@ -39,9 +39,15 @@
       hostname:
         name: "{{ inventory_hostname }}"
 
-    - name: Shut down every day at 4:30 AM
+    - name: Reboot every day at 4:30 AM
       cron:
-        name: "Power off at night to save energy"
+        name: "Reboot every day at 4:30 AM"
         minute: "30"
         hour: "4"
         job: "/sbin/reboot"
+    - name: Stop all containers every day at 4:00 AM
+      cron:
+        name: "Stop all containers every day at 4:00 AM"
+        minute: "0"
+        hour: "4"
+        job: "docker stop $(docker container ls -q)"
