feat: Paperless-ngx

--- a/requirements.yml
+++ b/requirements.yml
@@ -3,6 +3,7 @@ collections:
   - name: ansible.posix
   - name: community.general
   - name: community.docker
+  - name: community.postgresql
 roles:
   - name: geerlingguy.security
   - name: geerlingguy.ntp
