--- a/roles/services/tasks/postgres.yml
+++ b/roles/services/tasks/postgres.yml
@@ -1,4 +1,4 @@
-- include_vars: zigbee2mqtt.yml
+- include_vars: postgres.yml
 
 - name: Create the directories
   file:
@@ -8,34 +8,38 @@
     owner: "root"
     group: "root"
   with_items:
-      - "{{ docker_dir }}/{{ container_name }}/data"
-
-- name: Copy the config file
-  copy:
-    src: files/zigbee2mqtt/
-    dest: "{{ docker_dir }}/{{ container_name }}/data/"
-    decrypt: yes
-    owner: "root"
-    group: "root"
+      - "{{ docker_dir }}/{{ container_name }}"
 
 - name: Make sure the {{ container_name }} container is created and running
   community.docker.docker_container:
     name: "{{ container_name }}"
-    image: "koenkk/zigbee2mqtt:latest"
+    image: "bitnami/postgresql:15"
     pull: yes
     state: "started"
     recreate: yes
     env:
       "TZ": "{{ timezone }}"
+      "POSTGRESQL_PASSWORD": "{{ postgres_password }}"
+    ports: "{{ host_port }}"
     volumes:
-      - "{{ docker_dir }}/{{ container_name }}/data:/app/data"
-      - "/run/udev:/run/udev:ro"
-    devices:
-      - "/dev/serial/by-id/{{ zigbee_coordinator_id }}:/dev/ttyACM0"
+      - "{{ docker_dir }}/{{ container_name }}:/bitnami/postgresql"
     networks:
       - name: docker_network
     purge_networks: yes
     restart_policy: always
+    user: "root:root"
+
+- name: Install psycopg2-binary
+  ansible.builtin.pip:
+    name: psycopg2-binary
+
+- name: Create databases
+  community.postgresql.postgresql_db:
+    name: "{{ item }}"
+    login_host: "0.0.0.0"
+    login_user: "{{ postgres_user }}"
+    login_password: "{{ postgres_password }}"
+  with_items: "{{ databases }}"
 
 - name: Start {{ container_name }} at 5:00 AM
   cron:
