--- a/roles/services/files/homeassistant/configuration.yaml
+++ b/roles/services/files/homeassistant/configuration.yaml
@@ -47,16 +47,20 @@ google_assistant:
   project_id: home-assitant-61266
   service_account: !include service-account.json
   report_state: true
+recorder:
+  db_url: postgresql://postgres:postgres@0.0.0.0:5432/homeassistant
 automation: !include automations.yaml
 scene: !include scenes.yaml
 script: !include scripts.yaml
 input_number: !include input_number.yaml
 template: !include templates.yaml
 binary_sensor: !include binary_sensor.yaml
+counter: !include counter.yaml
 # sensor: !include sensors.yaml
 notify: !include notifications.yaml
 tts: !include tts.yaml
 wake_on_lan:
+backup:
 panel_iframe:
   zigbee2mqtt:
     title: Zigbee2MQTT
