--- a/roles/services/files/homeassistant/templates.yaml
+++ b/roles/services/files/homeassistant/templates.yaml
@@ -18,3 +18,9 @@
     state_class: total_increasing
     device_class: energy
     state: "{{ (states('input_number.electricty_cheia_meter_reading')|int) + (states('input_number.electricty_ponta_meter_reading')|int) + (states('input_number.electricty_vazio_meter_reading')|int) }}"
+
+- sensor:
+    contador_impulsos_agua_reais:
+      friendly_name: Contador de impuslsos de água reais
+      value_template: >-
+        {{ 'unknown' if states('counter.contador_impulsos_agua') == 'unknown' else ((states('counter.contador_impulsos_agua')|int / 2)|round(0, "floor")) }}
