--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -5,3 +5,4 @@ locale: "en_US.UTF-8"
 keyboard_layout: "us"
 username: "breno"
 uid: "1000"
+ansible_distribution: "{{ 'Ubuntu' if ansible_distribution in ['Pop!_OS', 'Linux Mint'] else ansible_distribution }}"
