--- a/lisbon.yml
+++ b/lisbon.yml
@@ -8,11 +8,12 @@
 
   roles:
     - role: system
-    - role: docker
     - role: geerlingguy.security
     - role: geerlingguy.ntp
     - role: geerlingguy.git
     - role: geerlingguy.pip
+    - role: geerlingguy.docker
+    - role: docker
     - role: security
     - role: network
     - role: services
