--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -18,9 +18,35 @@
         force: yes
         ipam_config:
           - subnet: 172.20.0.0/24
-    - name: Stop all containers every day at 4:30 AM
+
+    - name: Stop all containers every day at 4:40 AM
       cron:
-        name: "Stop all containers every day at 4:30 AM"
-        minute: "30"
+        name: "Stop all containers every day at 4:40 AM"
+        minute: "40"
         hour: "4"
         job: "docker stop $(docker container ls -q)"
+
+    - name: Create tmp directory
+      file:
+        state: directory
+        path: /tmp/backup
+        recurse: yes
+        owner: "root"
+        group: "root"
+
+    - name: Copy backup scripts
+      copy:
+        src: ../../.scripts/backup/
+        dest: "/tmp/backup/"
+        decrypt: yes
+        owner: "root"
+        group: "root"
+
+    - name: Create backup image
+      community.docker.docker_image:
+        name: backup
+        build:
+          path: /tmp/backup/
+          pull: true
+        source: "build"
+        force_tag: true
