--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -1,3 +1,4 @@
-- include_tasks: homeassistant.yml
 - include_tasks: mosquitto.yml
 - include_tasks: zigbee2mqtt.yml
+- include_tasks: music-assistant.yml
+- include_tasks: homeassistant.yml
