--- a/roles/wireguard/tasks/wireguard.yml
+++ b/roles/wireguard/tasks/wireguard.yml
@@ -13,7 +13,7 @@
 - name: Make sure the {{ container_name }} container is created and running
   community.docker.docker_container:
     name: "{{ container_name }}"
-    image: "weejewel/wg-easy:latest"
+    image: "ghcr.io/wg-easy/wg-easy:latest"
     pull: yes
     state: "started"
     recreate: yes
