--- a/roles/alacritty/tasks/main.yml
+++ b/roles/alacritty/tasks/main.yml
@@ -39,7 +39,7 @@
     state: latest
     path: "$ALACRITTY_HOME"
 
-- name: Create the directory
+- name: Create directories
   become_user: "{{ username }}"
   file:
     state: directory
@@ -47,9 +47,8 @@
     recurse: yes
   with_items:
     - "{{ base_directory}}/dracula/alacritty"
-    - "{{ base_directory}}/ryanoasis/nerd-fonts"
 
-- name: Clone repository
+- name: Clone repositories
   become_user: "{{ username }}"
   git:
     repo: "{{ item.url }}"
@@ -60,13 +59,3 @@
         directory: "{{ base_directory}}/dracula/alacritty",
         url: "https://github.com/dracula/alacritty.git",
       }
-    - {
-        directory: "{{ base_directory}}/ryanoasis/nerd-fonts",
-        url: "https://github.com/ryanoasis/nerd-fonts.git",
-      }
-
-- name: Install fonts
-  command: ./install.sh
-  become_user: "{{ username }}"
-  args:
-    chdir: "{{ base_directory}}/ryanoasis/nerd-fonts"
