--- a/roles/system/tasks/essential.yml
+++ b/roles/system/tasks/essential.yml
@@ -8,21 +8,36 @@
 
 - name: Update and upgrade apt packages
   when: ansible_facts['os_family'] == "Debian"
-  apt:
-    upgrade: yes
-    autoremove: yes
-    force_apt_get: yes
-    update_cache: yes
+  block:
+    - name: apt-get update
+      apt:
+        update_cache: yes
 
-- name: Check if reboot required
-  stat:
-    path: /var/run/reboot-required
-  register: reboot_required_file
+    - name: Update all packages to their latest version
+      apt:
+        name: "*"
+        state: latest
 
-- name: Reboot if required
-  reboot:
-    msg: Rebooting due to a kernel update
-  when: reboot_required_file.stat.exists
+    - name: apt-get upgrade
+      apt:
+        upgrade: yes
+
+    - name: apt-get dist-upgrade
+      apt:
+        upgrade: dist
+
+    - name: apt-get dist-upgrade
+      apt:
+        upgrade: dist
+
+    - name: apt-get autoclean
+      apt:
+        autoclean: yes
+
+    - name: apt-get autoremove
+      apt:
+        autoremove: yes
+        purge: true
 
 - name: Include OS-specific variables
   include_vars: "{{ ansible_facts['lsb']['id'] }}.yml"
