--- a/linux-desktop.yml
+++ b/linux-desktop.yml
@@ -14,6 +14,8 @@
     - role: tmux
     - role: rust
     - role: deno
+    - role: sdkman
+    - role: golang
     - role: pnpm
     - role: alacritty
     - role: prompt
