--- a/lisbon.yml
+++ b/lisbon.yml
@@ -8,11 +8,15 @@
 
   roles:
     - role: system
+    - role: users
     - role: geerlingguy.security
     - role: geerlingguy.ntp
     - role: geerlingguy.git
     - role: geerlingguy.pip
     - role: geerlingguy.docker
+      vars:
+        docker_users:
+          - "{{ username }}"
     - role: docker
     - role: security
     - role: cloudflare
