--- a/tasks/ssh_juggle.yml
+++ b/tasks/ssh_juggle.yml
@@ -1,31 +1,32 @@
 ---
-- name: SSH Port Juggle | define the fallback default SSH port
+- name: SSH Port Juggle | define the fallback SSH port
   set_fact:
-    _default_ssh_port: 22
+    _fallback_ssh_port: "22"
 
-- name: SSH Port Juggle | Try configured ansible_port {{ ansible_port }}
-  wait_for_connection:
-    timeout: 10
-  ignore_errors: true
-  register: _ssh_port_result
-
-- name: SSH Port Juggle | Set the ansible_port to the fallback default port {{ _default_ssh_port }}
+- name: SSH User Juggle | define the fallback SSH user
   set_fact:
-    ansible_port: "{{ _default_ssh_port }}"
-  when:
-    - _ssh_port_result is failed
+    _fallback_ssh_user: "root"
 
-- name: SSH Port Juggle | Check fallback default port {{ ansible_port }}
-  wait_for_connection:
-    timeout: 10
-  ignore_errors: true
-  register: _ssh_port_default_result
-  when:
-    - _ssh_port_result is failed
+- name: SSH Port Juggle | save the original SSH port
+  set_fact:
+    _original_ssh_port: "{{ ansible_port }}"
 
-- name: SSH Port Juggle | Fail
-  fail: msg="Neither the configured ansible_port {{ ansible_port }} nor the fallback port {{ _default_ssh_port }} were reachable"
-  when:
-    - _ssh_port_result is failed
-    - _ssh_port_default_result is defined
-    - _ssh_port_default_result is failed
+- name: SSH User Juggle | save the original SSH user
+  set_fact:
+    _original_ssh_user: "{{ ansible_user }}"
+
+- name: SSH Juggle
+  include_tasks:
+    file: tasks/ssh_attempt.yml
+    apply:
+      when: _ssh_condition|d(true)
+  with_items:
+    - { port: "{{ _original_ssh_port }}", user: "{{ _original_ssh_user }}" }
+    - { port: "{{ _fallback_ssh_port }}", user: "{{ _original_ssh_user }}" }
+    - { port: "{{ _original_ssh_port }}", user: "{{ _fallback_ssh_user }}" }
+    - { port: "{{ _fallback_ssh_port }}", user: "{{ _fallback_ssh_user }}" }
+
+
+- name: SSH Juggle | Fail
+  fail: msg="Neither the configured ansible_port and ansible_user nor the fallback port and user were reachable"
+  when: _ssh_condition|d(true)
