--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -1,4 +1,5 @@
 - include_tasks: mosquitto.yml
 - include_tasks: zigbee2mqtt.yml
+- include_tasks: signal-messenger.yml
 - include_tasks: music-assistant.yml
 - include_tasks: homeassistant.yml
