--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -1,5 +1,7 @@
 - include_tasks: mosquitto.yml
 - include_tasks: zigbee2mqtt.yml
 - include_tasks: signal-messenger.yml
+  when:
+    - homeassistant_signal|bool != False
 - include_tasks: music-assistant.yml
 - include_tasks: homeassistant.yml
