--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -8,23 +8,21 @@
     volumes: true
     builder_cache: true
 
-- name: homeserver tasks
-  when: ansible_facts['hostname'] == "lisbon"
-  block:
-    - name: Create general docker network
-      community.docker.docker_network:
-        name: docker_network
-        state: present
-        force: yes
-        ipam_config:
-          - subnet: 172.20.0.0/24
+- name: Create general docker network
+  when:
+    - docker_generate_network|bool == True
+  community.docker.docker_network:
+    name: docker_network
+    state: present
+    force: yes
+    ipam_config:
+      - subnet: 172.20.0.0/24
 
-- name: server tasks
-  when: ansible_facts['hostname'] != "localhost"
-  block:
-    - name: Stop all containers every day at 4:40 AM
-      cron:
-        name: "Stop all containers every day at 4:40 AM"
-        minute: "40"
-        hour: "4"
-        job: "docker stop $(docker container ls -q)"
+- name: Stop all containers every day at 4:40 AM
+  when:
+    - docker_stop_containers|bool == True
+  cron:
+    name: "Stop all containers every day at 4:40 AM"
+    minute: "40"
+    hour: "4"
+    job: "docker stop $(docker container ls -q)"
