--- a/roles/homeassistant/tasks/zigbee2mqtt.yml
+++ b/roles/homeassistant/tasks/zigbee2mqtt.yml
@@ -12,7 +12,7 @@
 
 - name: Copy the config file
   copy:
-    src: files/zigbee2mqtt/
+    src: "files/{{ ansible_facts['hostname'] }}/zigbee2mqtt/"
     dest: "{{ docker_dir }}/{{ container_name }}/data/"
     decrypt: yes
     owner: "root"
