fix: Wrong hostname and missing variables for localhost

--- a/hosts.yml
+++ b/hosts.yml
@@ -16,7 +16,7 @@ machines:
       ansible_user: breno
       ansible_connection: ssh
       ansible_ssh_private_key_file: /home/breno/.ssh/Lisbon
-    lisbon:
+    viseu:
       ansible_host: viseu.brenosalles.com
       ansible_port: !vault |
           $ANSIBLE_VAULT;1.1;AES256
